--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,11 @@
+<% if @book.errors.any? %>
+  <ul class="error_messages">
+    <h3><%= @book.errors.count %>errors prohibited this user from being saved:</h3>
+        <% @book.errors.full_messages.each do |message| %>
+        <%= message %>
+        <% end %>
+  </ul>
+<% end %>
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-3'>
