--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,7 +16,25 @@
         </td>
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
+
+        <td>
+          <p>
+            <% if book.favorited_by?(current_user) %>
+              <%= link_to book_favorites_path(book_id: book.id, user_id: current_user.id), method: :delete do %>
+              ♥<%= book.favorites.count %>
+              <% end %>
+          </p>
+            <% else %>
+          <p>
+              <%= link_to book_favorites_path(book_id: book.id, user_id: current_user.id), method: :post do %>
+              ♡<%= book.favorites.count %>
+              <% end %>
+          </p>
+            <% end %>
+          </td>
+          <td>コメント数:</td>
       </tr>
-    <% end %>
+      <% end %>
+
   </tbody>
 </table>
