favorite_comment-finish

--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -32,7 +32,7 @@
           </p>
             <% end %>
           </td>
-          <td>コメント数:</td>
+          <td>コメント数:<%= book.post_comments.count %></td>
       </tr>
       <% end %>
 
