--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,8 +8,29 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+    <th>follows</th>
+    <th><%= user.followings.count %></th>
+  </tr>
+  <tr>
+    <th>followers</th>
+    <th><%= user.followers.count %></th>
+  </tr>
+  <tr>
+    <th>
+      <% if user == current_user %>
+        <div class='row'>
+          <%= link_to '',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
+        </div>
+      <% else %>
+        <% if current_user.following?(user) %>
+          <%= link_to "フォローを外す", user_relationships_path(user.id), method: :delete, class: "btn btn-sm btn-danger" %>
+        <% else %>
+          <%= link_to "フォローをする", user_relationships_path(user.id), method: :post, class: 'btn btn-success' %>
+        <% end %>
+      <% end %>
+
+    </th>
+  </tr>
 </table>
 
-<div class='row'>
-  <%= link_to '',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
-</div>
