--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,14 +8,16 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+
   <tr>
     <th>follows</th>
-    <th><%= user.followings.count %></th>
+    <th><%= link_to user.followings.count, user_followings_path(user.id) %></th>
   </tr>
   <tr>
     <th>followers</th>
-    <th><%= user.followers.count %></th>
+    <th><%= link_to user.followers.count, user_followers_path(user.id) %></th>
   </tr>
+
   <tr>
     <th>
       <% if user == current_user %>
