--- a/app/views/relationships/followers.html.erb
+++ b/app/views/relationships/followers.html.erb
@@ -1,20 +1,23 @@
 <h2>Follower Users</h2>
 <% if @users.exists? %>
+<table class='table'>
   <thead>
     <tr>
+      <th>image</th>
       <th>name</th>
-      <th></th>
-      <th></th>
+      <th colspan="3"></th>
     </tr>
   </thead>
+
   <tbody>
     <% @users.each do |user| %>
       <tr>
+        <td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
         <td><%= user.name %></td>
         <td>フォロー数: <%= user.followings.count %></td>
         <td>フォロワー数: <%= user.followers.count %></td>
-      </tr>
-    <% end %>
+        <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
+<% end %>
   </tbody>
 </table>
 <% else %>
